# oips-reproducibility

./: .gitattributes  .gitignore  ARCHIVE_COMPARISON_REPORT.md  CHANGELOG.md  CITATION.cff  CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  COMMAND_LOG.txt  CONTRIBUTING.md  FIGURE_SOURCE_DATA_INDEX.tsv  FINAL_FILE_INVENTORY.tsv  FINAL_INDEPENDENT_REVIEW.md  FINAL_PUBLIC_TREE.txt  GITHUB_CREATION_HANDOFF.md  LICENSE  MANUSCRIPT_RESULT_TRACEABILITY.tsv  MISSING_ANALYSES_REPORT.md  PLACEHOLDER_UPDATE_CHECKLIST.md  PRE_CLEANUP_FILE_INVENTORY.tsv  PRE_CLEANUP_TREE.txt  PRE_PUBLICATION_CHECKLIST.md  PUBLICATION_READINESS_REPORT.md  README.md  README.zh-CN.md  READY_FOR_GITHUB.md  RELEASE_NOTES_DRAFT.md  REPRODUCE.md  REPRODUCTION_REPORT.md  SCIENTIFIC_COVERAGE_MATRIX.tsv  SECURITY.md  SECURITY_AND_PRIVACY_AUDIT.md  TEST_REPORT.md  THIRD_PARTY.md  THIRD_PARTY_AUDIT.tsv  pyproject.toml
.github/workflows/: ci.yml
config/: figure_contract.yaml  manuscript.yaml
data/: README.md  SHA256SUMS  external_archive_manifest.tsv  manifest.tsv
data/metadata/: asset-rights.tsv  manual_decisions.tsv  systems.tsv
data/posthoc/: md_evidence.csv  redocking_evidence.csv  (+1 more)
docs/: code-and-data-availability-template.md  data-dictionary.md  journal-statements.md  limitations.md  methods.md  oips-formula.md  provenance.md  terminology-map.md
environment/: README.md  constraints.txt  environment.yml
legacy/: working-cluster-to-cluster-v2.csv
release/: manifest.json
scripts/: build_release_manifest.py  prepare_public_data.py  public_data_inventory.py  public_data_tables.py  release_check.py
(+87 files in other folders)
