[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "oips-repro"
version = "1.0.0"
description = "Reproducibility package for the OIPS pocket analysis"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.1,<3",
    "pandas>=2.2,<3.1",
    "scipy>=1.14,<2",
    "matplotlib>=3.9,<4",
    "PyYAML>=6,<7",
    "jsonschema>=4.23,<5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
]
release = [
    "cffconvert>=2,<3",
]

[project.scripts]
oips-repro = "oips_repro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
